<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/time"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:id="@+id/time_txt"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/score"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/score_txt"
            android:text="@string/init_score"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>


        <TextView
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:text="@string/miss"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/miss_txt"
            android:text="@string/init_miss"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>



    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/game__layout"
        android:gravity="center">


    </RelativeLayout>


</LinearLayout>